# TrustGraph

./: .env.example  .env.pagerank  .env.pagerank-local  .eslintrc.json  .gitignore  .gitmodules  .taskrc.yml  CLAUDE.md  COMPONENT_CONFIGURATION.md  Cargo.toml  EAS_CONFIGURATION.md  GOV.md  GOVERNANCE.md  HATS.md  LLM_CODE_REVIEW.md  LLM_REFACTOR.md  METAVEST_DEPLOYMENT.md  MULTI_COMPONENT_DEPLOYMENT.md  Makefile  PLAN.md  PREDICTION_MARKET_DEMO.md  PageRank-Testing-Guide.md  README.md  README_PROD.md  README_TESTNET.md  STRUCTURED_LLM_COMPLETION_IMPROVEMENTS.md  TRUST_GRAPH.md  Taskfile.yml  TrustAwarePageRank.md  ZODIAC_MODULES.md  ZODIAC_SETUP.md  claude.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  foundry.toml  package-lock.json  package.json  pagerank_network_verification.json  pnpm-lock.yaml  (+5 more)
.cursor/rules/: commands.mdc  service.mdc
.github/workflows/: contracts.yml  rust.yml  wavs-image-version-verifier.yml
components/actor/: Cargo.toml
components/aggregator/: Cargo.toml  Makefile
components/dao-agent/: Cargo.toml  README.md
components/eas-attest/: Cargo.toml  Makefile  README.md  Taskfile.yml
components/eas-compute/: Cargo.toml  README.md
components/eas-compute/src/: analytics.rs  bindings.rs  examples.rs  lib.rs  query.rs  solidity.rs  trigger.rs
components/geyser/: Cargo.toml  Makefile  README.md
components/geyser/src/: bindings.rs  ipfs.rs  lib.rs  service_parser.rs  trigger.rs
components/hats-creator/: Cargo.toml
components/hats-eligibility/: Cargo.toml
components/hats-minter/: Cargo.toml
components/hats-toggle/: Cargo.toml
components/llm-attester/: Cargo.toml  README.md  config.json
components/merkler/: Cargo.toml  Makefile  README.md  TRUST_AWARE_PAGERANK.md
components/merkler-pruner/: Cargo.toml  Makefile  README.md
components/merkler-pruner/src/: bindings.rs  lib.rs
components/prediction-market-oracle/: Cargo.toml  README.md
components/rewards/: Cargo.toml  PAGERANK.md  README_EAS_SOURCE.md  TRUST_AWARE_PAGERANK.md
components/safe-signer-sync/: Cargo.toml  Makefile  README.md
components/trust-graph/: Cargo.toml  Makefile  PAGERANK.md  README.md  README_EAS_SOURCE.md  TRUST_AWARE_PAGERANK.md
components/trust-graph/src/: attestation_graph.rs  config.rs  eas_pagerank.rs  lib.rs  solidity.rs  trigger.rs
components/universal-indexer/: Cargo.toml  Makefile  config.json
components/wavs-indexer/: Cargo.toml  Makefile  README.md  config.json
components/wavs-indexer/src/: lib.rs  solidity.rs  trigger.rs
components/wavs-indexer/src/transformers/: attestation.rs  interaction.rs  market_resolution.rs  mod.rs
config/: actor.json  components.json  llm_attester.json  llm_attester.template.json  merkler.json  networks.development.template.json  networks.production.json  prediction_market_oracle.json  safe_signer_sync.template.json  trust_graph.json  trust_graph.template.json  wavs_indexer.json  wavs_indexer.template.json  zodiac_signer.template.json
deploy/: build-service.ts  config.ts  create-aggregator.ts  create-operator.ts  deploy-contracts.ts  deploy-script.ts  env.ts  types.ts  upload-components.ts  upload-service.ts  utils.ts
deploy/templates/: operator.start.sh
docs/: EAS_CONFIGURATION.md  MULTI_COMPONENT_DEPLOYMENT.md
docs/handbook/: commands.mdx  service.mdx  submission.mdx  workflows.mdx
frontend/: .env.example  .eslintrc.json  .example.env  .gitignore  ATTESTATION.md  CHAT_API_CONFIG.md  CHAT_SETUP.md  CLAUDE.md  CONTRACTS.md  Copy.md  Flow.md  INSPIRATION.md  INVOCATION.md  PLAN.md  README.md  REFACTOR_NETWORK.md  config.development.json  config.production.json  next.config.mjs  offchain.schema.ts  package-lock.json  package.json  pnpm-lock.yaml  ponder.schema.ts  tsconfig.json  types.ts  wagmi.config.ts
frontend/abis/: ConditionalTokens.json  EAS.json  EASAttestTrigger.json  EASIndexerResolver.json  ENOVA.json  ERC20.json  GnosisSafe.json  GnosisSafeProxy.json  IWavsServiceManager.json  LMSRMarketMaker.json  MerkleFundDistributor.json  MerkleGovModule.json  MerkleSnapshot.json  MockUSDC.json  PredictionMarketController.json  PredictionMarketFactory.json  RewardDistributor.json  (+7 more)
hyperstition/: 21st.md  Audits.md  Commitments.md  DAICO.md  DAOICO.md  Gauges.md  Incentives.md  Launchpad.md  Locking.md  Operators.md  OptionDrop.md  PROMPT.md  PlayerCards.md  README.md  Steps.md  Symbient.md  TODO.md  Vesting.md
indexer/: .env.example  .eslintrc.json  .gitignore  drizzle.config.ts  offchain.schema.ts  package.json  ponder.config.ts  ponder.schema.ts  schema.ts
paper/: Makefile  README.md  main.tex  references.bib
patches/: @ponder__react.patch  @react-sigma__core.patch  ponder@0.14.3.patch
ponder/: .env.example  offchain.schema.ts  package-lock.json  package.json  ponder.config.ts  ponder.schema.ts
script/: ClaimRewards.s.sol  Common.s.sol  DeployDAICO.s.sol  DeployEAS.s.sol  DeployGovernance.s.sol  DeployHats.s.sol  DeployHats.sol.disabled  DeployMerkleGov.s.sol  DeployMerkler.s.sol  DeployNetwork.s.sol  DeployPOAServiceManager.s.sol  DeployPOAServiceManagerMinimal.s.sol  DeployPredictionMarket.s.sol  DeployRewards.s.sol  DeploySafeZodiacSignerSync.s.sol  DeployTestToken.s.sol  DeployUniversalIndexer.s.sol  DeployWavsIndexer.s.sol  DeployZodiacSafes.s.sol  EASAttest.s.sol  EASAttestTrigger.s.sol  EasAttest.s.sol  Governance.s.sol  MerkleGov.s.sol  Merkler.s.sol  PageRankTest.s.sol  PmBuyYes.s.sol  PmRedeem.s.sol  PmTrigger.s.sol  PredictionMarket.s.sol  Rewards.s.sol  RunPageRankTest.s.sol  Schema.s.sol  Trigger.s.sol  build-service.sh  configure-components.sh  create-aggregator.sh  create-deployer.sh  create-operator.sh  create-pagerank-attestations.sh  (+10 more)
script-metavest/: MetaVestDeployment.s.sol
spec/: Audits.md  Incentives.md  PlayerCards.md  Symbient.md  Vesting.md
taskfile/: build.yml  component.yml  config.yml  deploy.yml  eas-forge.yml  eas.yml  env.yml  forge.yml  governance.yml  hats.yml  merkle.yml  operator.yml  pagerank.yml  prediction-market.yml  rewards.yml  services.yml  trustgraph.yml
test/: Daico.t.sol  VotingPowerGovernorCompatibility.t.sol.bak
(+480 files in other folders)
