[workspace]
members = ["components/*", "packages/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.5.5"
license = "MIT"
authors = ["Lay3r Labs Team"]
repository = "https://github.com/Lay3rLabs/wavs"
rust-version = "1.87.0"

[workspace.dependencies]
# WASI
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
wit-bindgen = "0.44.0"
wstd = "0.5.4"
wasi = "0.14.2"
wavs-wasi-utils = "0.4.0"

# WAVS
wavs-llm = { path = "./packages/llm" }
wavs-eas = { path = "./packages/eas" }

# Other
schemars = "1.0.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
anyhow = "1.0.98"
async-trait = "0.1.88"

## Alloy
alloy-sol-macro = { version = "1.0.0", features = ["json"] }
alloy-sol-types = "1.0.0"
alloy-dyn-abi = "1.0.0"
alloy-json-abi = "1.0.0"
alloy-primitives = "1.0.0"
alloy-network = "0.15.10"
alloy-provider = { version = "0.15.10", default-features = false, features = [
    "rpc-api",
] }
alloy-rpc-types = "0.15.10"
alloy-contract = "0.15.10"
alloy-transport-http = { version = "0.15.10", default-features = false }

## IPFS
cid = "0.7"
multibase = "0.9"
multihash = "0.18"
bs58 = "0.5"

## Common dependencies
hex = "0.4.3"
ethabi = "18.0.0"
primitive-types = "0.13.1"
base64 = "0.22.1"
mockall = "0.11"
thiserror = "1.0.47"
tiny-keccak = { version = "2.0", features = ["keccak"] }

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true
