[package]
name = "wavs-eas-compute"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wavs-eas = { workspace = true }
wit-bindgen-rt = { workspace = true }
wavs-wasi-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
hex = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wavs-eas-compute"
target = "wavs:worker/wavs-world@0.5.1"
