[package]
name = "geyser"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["async"] }
wavs-wasi-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }

## IPFS
cid = { workspace = true }
multibase = { workspace = true }
multihash = { workspace = true }
bs58 = { workspace = true }

## Other
async-trait = { workspace = true }
wavs-types = "0.6.0-beta.1"
uuid = { version = "1.18.0", features = ["v5"] }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:geyser"
target = "wavs:operator@0.6.0-alpha.15"
