[package]
name = "merkler-pruner"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wstd = { workspace = true }
wavs-wasi-utils = { workspace = true }
wit-bindgen-rt = { workspace = true }
alloy-network = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-primitives = { workspace = true }
alloy-sol-macro = { workspace = true }
alloy-sol-types = { workspace = true }
alloy-provider = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:merkler-pruner"
target = "wavs:operator@=1.0.0"
