[package]
name = "trust-graph"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true, features = ["async"] }
wavs-wasi-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-rpc-types = { workspace = true }
wavs-indexer-api = { workspace = true }
wavs-merkle-sources = { workspace = true }
futures = { workspace = true }
wavs-ipfs = { workspace = true }
alloy-dyn-abi = { workspace = true }
# wavs-merkler = { workspace = true }

## IPFS
cid = { workspace = true }
multibase = { workspace = true }
multihash = { workspace = true }
bs58 = { workspace = true }

## Other
async-trait = { workspace = true }

[lib]
crate-type = ["cdylib"]

[profile.release]
codegen-units = 1
opt-level = "s"
debug = false
strip = true
lto = true

[package.metadata.component]
package = "component:trust-graph"
target = "wavs:operator@=1.3.0"
