[package]
name = "wavs-indexer"
edition.workspace = true
version.workspace = true
authors.workspace = true
rust-version.workspace = true
repository.workspace = true

[dependencies]
wit-bindgen-rt = { workspace = true }
wavs-wasi-utils = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
alloy-sol-macro = { workspace = true }
wstd = { workspace = true }
alloy-sol-types = { workspace = true }
anyhow = { workspace = true }
alloy-network = { workspace = true }
alloy-provider = { workspace = true }
alloy-primitives = { workspace = true }
alloy-rpc-types = { workspace = true }
alloy-contract = { workspace = true }
hex = { workspace = true }
async-trait = { workspace = true }
inventory = { workspace = true }
wavs-indexer-api = { workspace = true }

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "component:wavs-indexer"
target = "wavs:operator@=1.2.1"
